@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.5.0
 
-17 October 2017
+18 October 2017
 
 
 1. Introduction
@@ -77,6 +77,7 @@ The following methods have been added:
 - operator*(double&, double&)
 - operator/(GRmf&, double&)
 - GCTAOnOffObservation(GObservations&)
+- GCTAOnOffObservation(GPha&, GPha&, GArf&, GRmf&)
 - GCOMInstDir(GSkyDir&, double&)
 
 The following methods have been removed:
@@ -220,9 +221,13 @@ The GCTAOnOffObservation class now performs a proper response integration over
 the On and Off regions and takes into account the energy dispersion using the
 Redistribution Matrix File (#2210).
 
-A GCTAOnOffObservation(GObservations&) constructer has been added to the
-GCTAOnOffObservation class that creates a stacked CTA On/Off observations from
-all On/Off observations that are found in the observation container (#2228).
+Added GCTAOnOffObservation(GObservations&) constructor that creates a stacked
+CTA On/Off observation from all On/Off observations that are found in the
+observation container (#2228).
+
+Added GCTAOnOffObservation(GPha&, GPha&, GArf&, GRmf&) constructor to allow
+creation of an On/Off observation from On and Off spectra, an Auxiliary Response
+File and a Redistribution Matrix File (#2231).
 
 
 21. COMPTEL interface
