@@ -1,8 +1,9 @@
-2017-10-17
+2017-10-18
 
         * Version 1.5.0 released
         =========================
 
+        Add GCTAOnOffObservation PHA, ARF and RMF constructor (#2231)
         Implement observation stacking in GCTAOnOffObservation (#2228)
         Implement region integration in GCTAOnOffObservation (#2210)
         Add GPha arithmetic operators and scale access methods
